Moved 1.19 features to JSON (#3422)
* Initial feature changes (keep 1.18 features in Java)

* 1.19 initial Json templates

* Replace 1.19 Java templates with Json templates

* Cleaned 1.19 custom feature code

* Moved new feature blocks to Json

* Code format

* Template refactoring

Co-authored-by: KlemenDEV <16374228+KlemenDEV@users.noreply.github.com>