@@ -35,6 +35,7 @@ import net.mcreator.workspace.elements.ModElement;
 import javax.annotation.Nullable;
 import java.util.ArrayList;
 import java.util.Collection;
+import java.util.Collections;
 import java.util.List;
 
 @SuppressWarnings("unused") public class Feature extends GeneratableElement implements ICommonType {
@@ -57,7 +58,9 @@ import java.util.List;
 		return additionalData -> {
 			var blocklyBlockCodeGenerator = new BlocklyBlockCodeGenerator(
 					BlocklyLoader.INSTANCE.getFeatureBlockLoader().getDefinedBlocks(),
-					this.getModElement().getGenerator().getTemplateGeneratorFromName("features"), additionalData);
+					this.getModElement().getGenerator().getTemplateGeneratorFromName("features"), additionalData)
+					.setTemplateExtension(this.getModElement().getGeneratorConfiguration()
+							.getGeneratorName().equals("forge-1.18.2") ? "java" : "json"); // 1.18 features are in Java
 
 			var blocklyToFeature = new BlocklyToFeature(this.getModElement().getWorkspace(), this.getModElement(),
 					this.featurexml, this.getModElement().getGenerator().getTemplateGeneratorFromName("features"),
@@ -75,6 +78,10 @@ import java.util.List;
 	}
 
 	@Override public Collection<BaseType> getBaseTypesProvided() {
-		return List.of(BaseType.FEATURE);
+		if (hasGenerationConditions() || this.getModElement().getGeneratorConfiguration()
+				.getGeneratorName().equals("forge-1.18.2")) {
+			return List.of(BaseType.FEATURE);
+		}
+		return Collections.emptyList();
 	}
 }
